--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.28.0
 numpy>=1.21.0
-opencv-python>=4.5.0
+opencv-python-headless>=4.8.0
 scikit-image>=0.19.0
 matplotlib>=3.5.0
 Pillow>=8.0.0
